aml-syntax/src/parser/snapshots/aml_syntax__parser__tests__border_with_no_children.snap
---
source: aml-syntax/src/parser/tests.rs
assertion_line: 122
expression: ast
---
nodes:
  - Container:
      kind: Border
      children: []
      location:
        start_byte: 0
        end_byte: 6
      attributes: []
      original: border
      keyword:
        start_byte: 0
        end_byte: 6
variables: {}
scopes:
  - variables: []
    parent: ~
