aml-syntax/src/parser/snapshots/aml_syntax__parser__tests__component_slot.snap
---
source: aml-syntax/src/parser/tests.rs
assertion_line: 143
expression: ast
---
nodes:
  - ComponentSlot:
      name:
        Identifier:
          value: children
          location:
            start_byte: 1
            end_byte: 9
      location:
        start_byte: 0
        end_byte: 9
      original: $children
variables: {}
scopes:
  - variables: []
    parent: ~
